# objrec

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  requirements_gpu.txt  sandbox.py  test.py
chofer_torchex/chofer_torchex/nn/: fuctional.py  modules.py  slayer.py
chofer_torchex/chofer_torchex/pershom/: calculate_persistence.py  pershom_backend.py
chofer_torchex/chofer_torchex/utils/: boiler_plate.py  functional.py
chofer_torchex/chofer_torchex/utils/trainer/: trainer.py
chofer_torchex/chofer_torchex/utils/trainer/plugins/: progress.py  scores.py  training_schedule.py
chofer_torchex/pershom_dev/: bug_1.py  cpu_sorted_boundary_array_implementation.py  generate_profile_data.py  generate_test_data.py  pershom_script.py  refactor_vc_comp.py  setup.py  simplicial_complex.py  vc_comp_script.py
chofer_torchex/pershombox/: __init__.py  dgm_util.py  lebedev.py  pht.py  pht_metric.py  toplex.py
chofer_torchex/pershombox/_software_backends/: dipha_adapter.py  hera_adapter.py  perseus_adapter.py  resource_handler.py
chofer_torchex/tests/pershom/: test_VRCompCuda.py  test_pershom_backend.py
chofer_torchex/tutorials/: shared_code.py
src/: barcodes.py  cluster.py  datagen.py  distance_functions.py  features.py  globals.py  main.py  rnn.py  search.py  slayer.py  toy_shapes.py  utils.py  volume_ratios.py  word2vec.py
