[tool.poetry]
name = "objrec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "<1.19.0"
gensim = "^3.8.3"
pyclam = {path = "../clam"}
click = "^7.1.2"
ipython = "^7.18.1"
tensorflow = "^2.3.1"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
